perbaikan penamaan endpoint
